# gel-mcp

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  run_inspector.sh
.cursor/: mcp.json
.cursor/rules/: gel-rules-auto.mdc  gel-rules.mdc
.github/workflows/: ci.yml
dbschema/: default.gel
dbschema/migrations/: 00001-m1ku2yt.edgeql  00002-m1g5uig.edgeql
manual_testing/: testing_template.csv  testing_workflows.md
src/edgedb_mcp/: server.py
src/gel_mcp/: __init__.py  code_examples.jsonl  import_from_workflows.py  server.py  types.py  workflow_examples.jsonl
src/gel_mcp/common/: types.py
src/gel_mcp/static/: Makefile  gel-python-auto.mdc  gel-rules-auto.mdc  gel-typescript-auto.mdc  workflows.jsonl
src/gel_mcp/static/src/: gel-rules-auto.md  gel-typescript-auto.md
src/gel_mcp/workflow_importer/common/: types.py
tests/: __init__.py  conftest.py  test_import_from_workflows.py  test_server.py
tests/common/: __init__.py  test_types.py
