[project]
name = "gel-mcp"
version = "0.1.0"
description = "Model Context Protocol server that provides access to Gel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "gel>=3.0.0",
 "jinja2>=3.1.4",
 "mcp>=1.3.0",
]
[[project.authors]]
name = "deepbuzin"
email = "andrey@geldata.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "notebook>=7.3.2",
]

[project.scripts]
gel-mcp = "gel_mcp:main"
