[project]
name = "gel-mcp"
version = "0.1.0"
description = "Model Context Protocol server that provides access to Gel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "gel>=3.0.0",
 "mcp[cli]>=1.3.0",
 "pydantic>=2.10.2",
]
[[project.authors]]
name = "anbuzin"
email = "andrey@geldata.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[project.scripts]
gel-mcp = "gel_mcp:main"
lint = "ruff check --fix"
format = "ruff format"
check = "mypy src"

[tool.hatch.build.force-include]
"src/gel_mcp/static/gel-rules-auto.mdc" = "gel_mcp/static/gel-rules-auto.mdc"
"src/gel_mcp/static/workflows.jsonl" = "gel_mcp/static/workflows.jsonl"
